plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'software.amazon.awssdk:aws-sdk-java:2.26.7'



	testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.11.0'
	implementation group: 'org.objenesis', name: 'objenesis', version: '2.6'
	implementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.14.16'
	testImplementation group: 'net.bytebuddy', name: 'byte-buddy-agent', version: '1.12.19'
	implementation group: 'org.objenesis', name: 'objenesis', version: '3.3'
	implementation group: 'com.amazonaws.secretsmanager', name: 'aws-secretsmanager-jdbc', version: '2.0.2'
	implementation 'javax.servlet:javax.servlet-api:4.0.1'

	runtimeOnly 'com.mysql:mysql-connector-j'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	

	implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.3'
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
    jvmArgs '-Djdk.attach.allowAttachSelf=true'
}
